Fix mobile alignment of info section

--- a/components/info/components/contact/index.module.scss
+++ b/components/info/components/contact/index.module.scss
@@ -1,15 +1,33 @@
 @import '../../../../styles/global.scss';
 
 .contactInfoContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: max-content;
+  margin: 0 auto;
+
   .contact {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 0.5rem;
+    justify-content: flex-start;
+    gap: 0.75rem;
     padding: 0.5rem 0;
+    width: max-content;
 
     &:hover {
       cursor: pointer;
     }
+  }
+
+  .icon {
+    width: 24px;
+    min-width: 24px;
+  }
+
+  @include respond-to(md) {
+    width: 100%;
+    margin: 0;
   }
 }
