--- a/components/info/components/social/index.module.scss
+++ b/components/info/components/social/index.module.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  width: max-content;
+  margin: 0 auto;
 
   p {
     margin: 0;
@@ -12,7 +14,6 @@
 
   .socialItem {
     display: flex;
-    gap: 0.5rem;
     align-items: center;
     text-decoration: none;
     cursor: pointer;
@@ -21,5 +22,22 @@
     @include respond-to(md) {
       padding: 0.5rem 0;
     }
+  }
+
+  .socialLink {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    text-decoration: none;
+  }
+
+  .icon {
+    width: 24px;
+    min-width: 24px;
+  }
+
+  @include respond-to(md) {
+    width: 100%;
+    margin: 0;
   }
 }
